[project]
name = "image-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "gitpython>=3.1.30",
    "matplotlib>=3.3",
    "numpy>=1.23.5",
    "opencv-python>=4.1.1",
    "pandas>=1.1.4",
    "pillow>=10.3.0",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "pyopengl>=3.1.9",
    "pyyaml>=5.3.1",
    "requests>=2.32.2",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "setuptools>=70.0.0",
    "thop>=0.1.1",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "tqdm>=4.66.3",
    "ultralytics>=8.2.34",
]
